--- a/tweeter/tweeter-server/package.json
+++ b/tweeter/tweeter-server/package.json
@@ -3,17 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-      "build": "npm run compile",
-      "compile": "npm run clean && tsc",
-      "clean": "rm -rf dist"
+    "build": "npm run compile",
+    "compile": "npm run clean && tsc",
+    "clean": "rm -rf dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "tweeter-shared": "file:../tweeter-shared",
+    "@aws-sdk/client-s3": "^3.779.0",
+    "bcryptjs": "^3.0.2",
     "date-fns": "^3.3.1",
+    "tweeter-shared": "file:../tweeter-shared",
     "uuid": "^9.0.1"
   }
 }
