--- a/tweeter/tweeter-web/package.json
+++ b/tweeter/tweeter-web/package.json
@@ -2,6 +2,7 @@
     "name": "tweeter-web",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
         "@fortawesome/free-brands-svg-icons": "^6.5.1",
@@ -11,6 +12,7 @@
         "@types/react-dom": "^18.2.19",
         "bootstrap": "^5.3.3",
         "buffer": "^6.0.3",
+        "fs": "^0.0.1-security",
         "isomorphic-fetch": "^3.0.0",
         "node": "^20.11.1",
         "react": "^18.2.0",
@@ -18,6 +20,7 @@
         "react-dom": "^18.2.0",
         "react-infinite-scroll-component": "^6.1.0",
         "react-router-dom": "^6.22.2",
+        "ts-node": "^10.9.2",
         "tweeter-shared": "file:../tweeter-shared",
         "typescript": "^4.9.5",
         "update-browserslist-db": "^1.1.2",
@@ -57,7 +60,7 @@
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^14.6.1",
         "@types/jest": "^29.5.14",
-        "@types/node": "^20.11.24",
+        "@types/node": "^20.17.30",
         "@typestrong/ts-mockito": "^2.7.12",
         "@vitejs/plugin-react": "^4.2.1",
         "babel-jest": "^29.7.0",
